add url docker hub

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,16 @@
 .git
 .gitignore
-node_modules
+**/node_modules
 npm-debug.log
 Dockerfile*
 docker-compose*
 LICENSE
 .vscode
-.data
-.terraform
-.terraform.lock.hcl
-.terraform.tfstate
-.terraform.tfstate.backup
-__pycache__
+**/.data
+**/.terraform
+**/.terraform.lock.hcl
+**/.terraform.tfstate
+**/.terraform.tfstate.backup
+**/__pycache__
 set_env_vars.sh
-README.md
+**/README.md
